# veadk-demo

./: .gitignore  README.md  agent.py  app.py  config.yaml.example  config.yaml.full  main.py  mcp_server.py  pyproject.toml  requirements.txt  run.sh
demo/: __init__.py  main.py  mock_data.py  prepare_ltm.py
weather_report/: agent.py
